fix overlapping of tags with text

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -5,10 +5,10 @@
 # "PhysRev":
 #   url: https://journals.aps.org/
 
-"Surface Catalysis":
+"Catalysis":
   color: "#cc0000"
 
-"Membrane Separations":
+"Separations":
   color: "#3465a4"
 
 "MOFs/ML":
